--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 </div>
 <a class="link" target="_blank" href="https://www.youtube.com/watch?v=CQ9K8GA5V_o">▶ bonus : one minute vid &#9664;</a>
 
+<div class="description">
+  <h2>every day a new code &#x2736; challenge  </h2>
 
-<h1>28&#x2736;days </h1>
+  <h1>28&#x2736;days </h1>
+</div>
+
 
 <div class="challenge">
 
