--- a/28d/1/main.html
+++ b/28d/1/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../28/main.html">last day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 1</a>
   <a href="../2/main.html">next day</a>
 
 </div>
