--- a/28d/13/main.html
+++ b/28d/13/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../12/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 13</a>
   <a href="../14/main.html">next day</a>
 
 </div>
