--- a/28d/20/main.html
+++ b/28d/20/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../19/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 20</a>
   <a href="../21/main.html">next day</a>
 
 </div>
