--- a/28d/24/main.html
+++ b/28d/24/main.html
@@ -24,7 +24,7 @@
 <div class="bar">
 
   <a href="../23/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 24</a>
   <a href="../25/main.html">next day</a>
 
 </div>
