--- a/28d/25/main.html
+++ b/28d/25/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../24/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 25</a>
   <a href="../26/main.html">next day</a>
 
 </div>
