--- a/28d/28/main.html
+++ b/28d/28/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../27/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 28</a>
   <a href="../1/main.html">first day</a>
 
 </div>
