--- a/28d/7/main.html
+++ b/28d/7/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../6/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 7</a>
   <a href="../8/main.html">next day</a>
 
 </div>
