--- a/28d/10/main.html
+++ b/28d/10/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../9/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 10</a>
   <a href="../11/main.html">next day</a>
 
 </div>
