--- a/28d/15/main.html
+++ b/28d/15/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../14/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 15</a>
   <a href="../16/main.html">next day</a>
 
 </div>
