--- a/28d/3/main.html
+++ b/28d/3/main.html
@@ -23,7 +23,7 @@
 <div class="bar">
 
   <a href="../2/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 3</a>
   <a href="../4/main.html">next day</a>
 
 </div>
