--- a/28d/9/main.html
+++ b/28d/9/main.html
@@ -22,7 +22,7 @@
 <div class="bar">
 
   <a href="../8/main.html">previous day</a>
-  <a href="../../index.html">28 days challenge</a>
+  <a href="../../index.html">day 9</a>
   <a href="../10/main.html">next day</a>
 
 </div>
