--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <a class="bullet" href="28d/28/main.html"> 28 </a>
   
 </div>
+<a class="link" href="about me/index.html">▶ about me ▶ portfolio &#9664;</a>
 
 </main>
 </body>
