--- a/about me/index.html
+++ b/about me/index.html
@@ -20,17 +20,17 @@
 
 
 <div class="centering">
-  <h1>Hi, <br />I'm Uliana Gromyko, a student of<button id="b1"> Graphic Design at HKU </button></h1>
+  <h1><br />Uliana Gromyko is a student of<button id="b1"> Graphic Design at HKU </button></h1>
 
-  <h1>I digitally expresses my fascinations <br />in form of<button id="b2"> whAPOW videos</button>and<button id="b3"> creat1ve c0d1ng </button></h1>
+  <h1>She digitally expresses her fascinations <br />in the form of<button id="b2"> whAPOW videos</button>and<button id="b3"> creat1ve c0d1ng </button></h1>
 
-  <h1>I spend my summers following internships <br />(see latest showreel from<button id="b4"> summer 2024 </button>)</h1>
+  <h1>She spends her summers undertaking internships <br />(see latest showreel from<button id="b4"> summer 2024 </button>)</h1>
 
-  <h1>Right now I'm working on my two graduation projects:<br /><button id="b5"> subversive tool </button>&<button id="b6"> love your cursor </button></h1>
+  <h1>Right now she's working on her two graduation projects:<br /><button id="b5"> subversive tool </button>&<button id="b6"> love your cursor </button></h1>
 
-  <h1>Although my social skills are lacking, passion for creation is the driving force<button id="b7"> in my life </button></h1>
+  <h1>She has a creative swiss army knife, passion for creation is the driving force<button id="b7"> in her life </button></h1>
 
-  <h1>Say hello: 064 2162 596<br />Mail hello:<button> <a href="mailto:ulya.gromyko@gmail.com">ulya.gromyko@gmail.com </a></button></h1>
+  <h1>Phone / Whatsapp: 064 2162 596<br />Contact via mail:<button> <a href="mailto:ulya.gromyko@gmail.com">ulya.gromyko@gmail.com </a></button></h1>
 </div>
 
 </main>
@@ -79,25 +79,25 @@ b3.onclick = function() { //creative coding <-- NEEDS NEW VID
 b4.onclick = function() { //clipjesfabriek
   m.style.display = "flex";
   v.src = "https://www.youtube.com/embed/65G6mRwpqWM?autoplay=1";
-  t.innerHTML = 'on my latest internship, at Clipjesfabriek, I have perfected my motion design, animation and editing skills';
+  t.innerHTML = 'During my latest internship, at Clipjesfabriek, I perfected my motion design, animation and editing skills';
 }
 
 b5.onclick = function() { // gp = tool
   m.style.display = "flex";
   v.src = "https://www.youtube.com/embed/zHwsqk-SGgY?autoplay=1";
-  t.innerHTML = 'I am currently building a tool in responce to recent Adobe developments';
+  t.innerHTML = 'I am currently building a tool in response to recent Adobe developments';
 }
 
 b6.onclick = function() { // gp = cursor
   m.style.display = "flex";
   v.src = "https://www.youtube.com/embed/N_h-nOlLkYg?autoplay=1";
-  t.innerHTML = 'with love for the online marginal communities, this attempt will explore personal presence on the web';
+  t.innerHTML = 'with love for online marginalized communities, this project will explore personal presence on the web';
 }
 
 b7.onclick = function() { //instagram link
   m.style.display = "flex";
   v.src = "";
-  t.innerHTML = 'I share more personal, unprofessional stuff on insta.<button style="font-weight: 200;font-size: 50px;text-align: left;"><a href="https://www.instagram.com/uly.grom.ana/">take a look</a></button>'
+  t.innerHTML = 'I share more personal, unprofessional stuff on my instagram.<button style="font-weight: 200;font-size: 50px;text-align: left;"><a href="https://www.instagram.com/uly.grom.ana/">take a look</a></button>'
 }
 
 
