--- a/about me/index.html
+++ b/about me/index.html
@@ -28,7 +28,7 @@
 
   <h1>Right now she's working on her two graduation projects:<br /><button id="b5"> subversive tool </button>&<button id="b6"> love your cursor </button></h1>
 
-  <h1>She has a creative swiss army knife, passion for creation is the driving force<button id="b7"> in her life </button></h1>
+  <h1>She is a creative swiss army knife, passion for creation is the driving force<button id="b7"> in her life </button></h1>
 
   <h1>Phone / Whatsapp: 064 2162 596<br />Contact via mail:<button> <a href="mailto:ulya.gromyko@gmail.com">ulya.gromyko@gmail.com </a></button></h1>
 </div>
