--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
         and <a href="#anchorName">reach out</a> if you want to work with me!</h2>
 
     </div>
+
+      <div class="sections">
+
+        <h1>gradu&#x2736;ation</h1>
+      
+        <div class="challenge-row">
+          <iframe src="https://drive.google.com/file/d/1WUsAgC8nw17YWBD51hghW5WhmCfMW5l9/preview" class="single-video" allow="autoplay"></iframe>
+
+          <a class="ASCII-button"  href="keyframe_type_tool/index.html">&#x2736;<br>ASCII<br>ANIMATION<br>TOOL<br>&#x2736;</a>
+      </div>
+
+
+    </div>
+
     <div class="sections">
 
     <h1>show&#x2736;reels</h1>
@@ -97,16 +111,13 @@
       </div>
 
     </div>
+    
+    <!-- 
     <div class="sections">
 
-      <h1>graduation&#x2736;</h1>
+      <h1>travel&#x2736;journal</h1>
 
-    </div>
-    <div class="sections">
-
-      <h1>travel&#x2736;+</h1>
-
-    </div>
+    </div> -->
     <div>
 
       <h1 id="anchorName">contact&#x2736;</h1>
