--- a/28d/1/main.html
+++ b/28d/1/main.html
@@ -22,9 +22,9 @@
 
 <div class="bar">
 
-  <a href="../28/main.html">last day</a>
-  <a href="../../index.html">day 1</a>
-  <a href="../2/main.html">next day</a>
+  <a href="../28/main">last day</a>
+  <a href="../../index">day 1</a>
+  <a href="../2/main">next day</a>
 
 </div>
 </main>
