--- a/28d/13/main.html
+++ b/28d/13/main.html
@@ -16,6 +16,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>>
   <script src="https://cdn.jsdelivr.net/npm/d3-delaunay@6"></script>
   <meta charset="utf-8" />
+  
+  <script defer src=https://cdn.JsDelivr.net/npm/p5></script>
+  <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.dom.min.js></script>
+  <script defer src=https://cdn.JsDelivr.net/npm/p5/lib/addons/p5.sound.min.js></script>
 </head>
 
 <body>
