--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="sections">
 
-        <h1>gradu&#x2736;ation</h1>
+        <h1>gradu&#x2736;ation <span class="subnote">* nominated for HKU Awards</span></h1>
       
         <div class="challenge-row">
           <iframe src="https://drive.google.com/file/d/1wujuLqsurbc1WG_snsk-7TtqgB8lUj-K/preview" class="single-video" allow="autoplay"></iframe>
